gen/PALParser.cpp

// Generated from dsl/PAL.g4 by ANTLR 4.9.3


#include "PALListener.h"

#include "PALParser.h"


using namespace antlrcpp;
using namespace pal;
using namespace antlr4;

PALParser::PALParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

PALParser::~PALParser() {
  delete _interpreter;
}

std::string PALParser::getGrammarFileName() const {
  return "PAL.g4";
}

const std::vector<std::string>& PALParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& PALParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Pal_intContext ------------------------------------------------------------------

PALParser::Pal_intContext::Pal_intContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PALParser::Pal_intContext::PAL_INT() {
  return getToken(PALParser::PAL_INT, 0);
}


size_t PALParser::Pal_intContext::getRuleIndex() const {
  return PALParser::RulePal_int;
}

void PALParser::Pal_intContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_int(this);
}

void PALParser::Pal_intContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_int(this);
}

PALParser::Pal_intContext* PALParser::pal_int() {
  Pal_intContext *_localctx = _tracker.createInstance<Pal_intContext>(_ctx, getState());
  enterRule(_localctx, 0, PALParser::RulePal_int);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PALParser::T__0) {
      setState(28);
      match(PALParser::T__0);
    }
    setState(31);
    match(PALParser::PAL_INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_directionContext ------------------------------------------------------------------

PALParser::Pal_directionContext::Pal_directionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PALParser::Pal_directionContext::getRuleIndex() const {
  return PALParser::RulePal_direction;
}

void PALParser::Pal_directionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_direction(this);
}

void PALParser::Pal_directionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_direction(this);
}

PALParser::Pal_directionContext* PALParser::pal_direction() {
  Pal_directionContext *_localctx = _tracker.createInstance<Pal_directionContext>(_ctx, getState());
  enterRule(_localctx, 2, PALParser::RulePal_direction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PALParser::T__0)
      | (1ULL << PALParser::T__1)
      | (1ULL << PALParser::T__2)
      | (1ULL << PALParser::T__3))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_timeunitContext ------------------------------------------------------------------

PALParser::Pal_timeunitContext::Pal_timeunitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PALParser::Pal_timeunitContext::getRuleIndex() const {
  return PALParser::RulePal_timeunit;
}

void PALParser::Pal_timeunitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_timeunit(this);
}

void PALParser::Pal_timeunitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_timeunit(this);
}

PALParser::Pal_timeunitContext* PALParser::pal_timeunit() {
  Pal_timeunitContext *_localctx = _tracker.createInstance<Pal_timeunitContext>(_ctx, getState());
  enterRule(_localctx, 4, PALParser::RulePal_timeunit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    _la = _input->LA(1);
    if (!(_la == PALParser::T__4

    || _la == PALParser::T__5)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_targetContext ------------------------------------------------------------------

PALParser::Pal_targetContext::Pal_targetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PALParser::Pal_targetContext::PAL_AT() {
  return getToken(PALParser::PAL_AT, 0);
}

tree::TerminalNode* PALParser::Pal_targetContext::PAL_OF() {
  return getToken(PALParser::PAL_OF, 0);
}

std::vector<PALParser::Pal_intContext *> PALParser::Pal_targetContext::pal_int() {
  return getRuleContexts<PALParser::Pal_intContext>();
}

PALParser::Pal_intContext* PALParser::Pal_targetContext::pal_int(size_t i) {
  return getRuleContext<PALParser::Pal_intContext>(i);
}

tree::TerminalNode* PALParser::Pal_targetContext::PAL_REQUIRED() {
  return getToken(PALParser::PAL_REQUIRED, 0);
}

tree::TerminalNode* PALParser::Pal_targetContext::PAL_QUOTED_STRING() {
  return getToken(PALParser::PAL_QUOTED_STRING, 0);
}

tree::TerminalNode* PALParser::Pal_targetContext::PAL_INT() {
  return getToken(PALParser::PAL_INT, 0);
}


size_t PALParser::Pal_targetContext::getRuleIndex() const {
  return PALParser::RulePal_target;
}

void PALParser::Pal_targetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_target(this);
}

void PALParser::Pal_targetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_target(this);
}

PALParser::Pal_targetContext* PALParser::pal_target() {
  Pal_targetContext *_localctx = _tracker.createInstance<Pal_targetContext>(_ctx, getState());
  enterRule(_localctx, 6, PALParser::RulePal_target);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37);
    _la = _input->LA(1);
    if (!(_la == PALParser::PAL_AT

    || _la == PALParser::PAL_OF)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(39);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PALParser::PAL_QUOTED_STRING) {
      setState(38);
      antlrcpp::downCast<Pal_targetContext *>(_localctx)->path = match(PALParser::PAL_QUOTED_STRING);
    }
    setState(42);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PALParser::PAL_REQUIRED) {
      setState(41);
      match(PALParser::PAL_REQUIRED);
    }
    setState(44);
    match(PALParser::T__6);
    setState(45);
    antlrcpp::downCast<Pal_targetContext *>(_localctx)->x = pal_int();
    setState(46);
    match(PALParser::T__7);
    setState(47);
    antlrcpp::downCast<Pal_targetContext *>(_localctx)->y = pal_int();
    setState(50);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PALParser::T__7) {
      setState(48);
      match(PALParser::T__7);
      setState(49);
      antlrcpp::downCast<Pal_targetContext *>(_localctx)->delta = match(PALParser::PAL_INT);
    }
    setState(52);
    match(PALParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_clickContext ------------------------------------------------------------------

PALParser::Pal_clickContext::Pal_clickContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PALParser::Pal_clickContext::PAL_CLICK() {
  return getToken(PALParser::PAL_CLICK, 0);
}

PALParser::Pal_targetContext* PALParser::Pal_clickContext::pal_target() {
  return getRuleContext<PALParser::Pal_targetContext>(0);
}

tree::TerminalNode* PALParser::Pal_clickContext::PAL_REQUIRED() {
  return getToken(PALParser::PAL_REQUIRED, 0);
}

tree::TerminalNode* PALParser::Pal_clickContext::PAL_QUOTED_STRING() {
  return getToken(PALParser::PAL_QUOTED_STRING, 0);
}


size_t PALParser::Pal_clickContext::getRuleIndex() const {
  return PALParser::RulePal_click;
}

void PALParser::Pal_clickContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_click(this);
}

void PALParser::Pal_clickContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_click(this);
}

PALParser::Pal_clickContext* PALParser::pal_click() {
  Pal_clickContext *_localctx = _tracker.createInstance<Pal_clickContext>(_ctx, getState());
  enterRule(_localctx, 8, PALParser::RulePal_click);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(PALParser::PAL_CLICK);
    setState(55);
    pal_target();
    setState(57);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PALParser::PAL_QUOTED_STRING) {
      setState(56);
      antlrcpp::downCast<Pal_clickContext *>(_localctx)->found = match(PALParser::PAL_QUOTED_STRING);
    }
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PALParser::PAL_REQUIRED) {
      setState(59);
      match(PALParser::PAL_REQUIRED);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_scrollContext ------------------------------------------------------------------

PALParser::Pal_scrollContext::Pal_scrollContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PALParser::Pal_scrollContext::PAL_SCROLL() {
  return getToken(PALParser::PAL_SCROLL, 0);
}

tree::TerminalNode* PALParser::Pal_scrollContext::PAL_INT() {
  return getToken(PALParser::PAL_INT, 0);
}

PALParser::Pal_directionContext* PALParser::Pal_scrollContext::pal_direction() {
  return getRuleContext<PALParser::Pal_directionContext>(0);
}

tree::TerminalNode* PALParser::Pal_scrollContext::PAL_AT() {
  return getToken(PALParser::PAL_AT, 0);
}

tree::TerminalNode* PALParser::Pal_scrollContext::PAL_QUOTED_STRING() {
  return getToken(PALParser::PAL_QUOTED_STRING, 0);
}


size_t PALParser::Pal_scrollContext::getRuleIndex() const {
  return PALParser::RulePal_scroll;
}

void PALParser::Pal_scrollContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_scroll(this);
}

void PALParser::Pal_scrollContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_scroll(this);
}

PALParser::Pal_scrollContext* PALParser::pal_scroll() {
  Pal_scrollContext *_localctx = _tracker.createInstance<Pal_scrollContext>(_ctx, getState());
  enterRule(_localctx, 10, PALParser::RulePal_scroll);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(PALParser::PAL_SCROLL);
    setState(64);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PALParser::T__0)
      | (1ULL << PALParser::T__1)
      | (1ULL << PALParser::T__2)
      | (1ULL << PALParser::T__3))) != 0)) {
      setState(63);
      pal_direction();
    }
    setState(66);
    antlrcpp::downCast<Pal_scrollContext *>(_localctx)->offset = match(PALParser::PAL_INT);
    setState(69);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PALParser::PAL_AT) {
      setState(67);
      match(PALParser::PAL_AT);
      setState(68);
      antlrcpp::downCast<Pal_scrollContext *>(_localctx)->found = match(PALParser::PAL_QUOTED_STRING);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_moveContext ------------------------------------------------------------------

PALParser::Pal_moveContext::Pal_moveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PALParser::Pal_moveContext::PAL_MOVE() {
  return getToken(PALParser::PAL_MOVE, 0);
}

PALParser::Pal_targetContext* PALParser::Pal_moveContext::pal_target() {
  return getRuleContext<PALParser::Pal_targetContext>(0);
}


size_t PALParser::Pal_moveContext::getRuleIndex() const {
  return PALParser::RulePal_move;
}

void PALParser::Pal_moveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_move(this);
}

void PALParser::Pal_moveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_move(this);
}

PALParser::Pal_moveContext* PALParser::pal_move() {
  Pal_moveContext *_localctx = _tracker.createInstance<Pal_moveContext>(_ctx, getState());
  enterRule(_localctx, 12, PALParser::RulePal_move);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(PALParser::PAL_MOVE);
    setState(72);
    pal_target();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_enterContext ------------------------------------------------------------------

PALParser::Pal_enterContext::Pal_enterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PALParser::Pal_enterContext::PAL_ENTER() {
  return getToken(PALParser::PAL_ENTER, 0);
}


size_t PALParser::Pal_enterContext::getRuleIndex() const {
  return PALParser::RulePal_enter;
}

void PALParser::Pal_enterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_enter(this);
}

void PALParser::Pal_enterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_enter(this);
}

PALParser::Pal_enterContext* PALParser::pal_enter() {
  Pal_enterContext *_localctx = _tracker.createInstance<Pal_enterContext>(_ctx, getState());
  enterRule(_localctx, 14, PALParser::RulePal_enter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(PALParser::PAL_ENTER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_pasteContext ------------------------------------------------------------------

PALParser::Pal_pasteContext::Pal_pasteContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PALParser::Pal_pasteContext::PAL_PASTE() {
  return getToken(PALParser::PAL_PASTE, 0);
}

tree::TerminalNode* PALParser::Pal_pasteContext::PAL_QUOTED_STRING() {
  return getToken(PALParser::PAL_QUOTED_STRING, 0);
}


size_t PALParser::Pal_pasteContext::getRuleIndex() const {
  return PALParser::RulePal_paste;
}

void PALParser::Pal_pasteContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_paste(this);
}

void PALParser::Pal_pasteContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_paste(this);
}

PALParser::Pal_pasteContext* PALParser::pal_paste() {
  Pal_pasteContext *_localctx = _tracker.createInstance<Pal_pasteContext>(_ctx, getState());
  enterRule(_localctx, 16, PALParser::RulePal_paste);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(PALParser::PAL_PASTE);
    setState(78);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PALParser::PAL_QUOTED_STRING) {
      setState(77);
      antlrcpp::downCast<Pal_pasteContext *>(_localctx)->content = match(PALParser::PAL_QUOTED_STRING);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_saveContext ------------------------------------------------------------------

PALParser::Pal_saveContext::Pal_saveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PALParser::Pal_saveContext::PAL_SAVE() {
  return getToken(PALParser::PAL_SAVE, 0);
}

tree::TerminalNode* PALParser::Pal_saveContext::PAL_QUOTED_STRING() {
  return getToken(PALParser::PAL_QUOTED_STRING, 0);
}


size_t PALParser::Pal_saveContext::getRuleIndex() const {
  return PALParser::RulePal_save;
}

void PALParser::Pal_saveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_save(this);
}

void PALParser::Pal_saveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_save(this);
}

PALParser::Pal_saveContext* PALParser::pal_save() {
  Pal_saveContext *_localctx = _tracker.createInstance<Pal_saveContext>(_ctx, getState());
  enterRule(_localctx, 18, PALParser::RulePal_save);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(PALParser::PAL_SAVE);
    setState(81);
    antlrcpp::downCast<Pal_saveContext *>(_localctx)->path = match(PALParser::PAL_QUOTED_STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_waitContext ------------------------------------------------------------------

PALParser::Pal_waitContext::Pal_waitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PALParser::Pal_waitContext::PAL_WAIT() {
  return getToken(PALParser::PAL_WAIT, 0);
}

PALParser::Pal_timeunitContext* PALParser::Pal_waitContext::pal_timeunit() {
  return getRuleContext<PALParser::Pal_timeunitContext>(0);
}

tree::TerminalNode* PALParser::Pal_waitContext::PAL_INT() {
  return getToken(PALParser::PAL_INT, 0);
}


size_t PALParser::Pal_waitContext::getRuleIndex() const {
  return PALParser::RulePal_wait;
}

void PALParser::Pal_waitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_wait(this);
}

void PALParser::Pal_waitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_wait(this);
}

PALParser::Pal_waitContext* PALParser::pal_wait() {
  Pal_waitContext *_localctx = _tracker.createInstance<Pal_waitContext>(_ctx, getState());
  enterRule(_localctx, 20, PALParser::RulePal_wait);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(PALParser::PAL_WAIT);
    setState(84);
    antlrcpp::downCast<Pal_waitContext *>(_localctx)->duration = match(PALParser::PAL_INT);
    setState(85);
    pal_timeunit();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_pluginContext ------------------------------------------------------------------

PALParser::Pal_pluginContext::Pal_pluginContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PALParser::Pal_pluginContext::PAL_PLUGIN() {
  return getToken(PALParser::PAL_PLUGIN, 0);
}

tree::TerminalNode* PALParser::Pal_pluginContext::PAL_QUOTED_STRING() {
  return getToken(PALParser::PAL_QUOTED_STRING, 0);
}


size_t PALParser::Pal_pluginContext::getRuleIndex() const {
  return PALParser::RulePal_plugin;
}

void PALParser::Pal_pluginContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_plugin(this);
}

void PALParser::Pal_pluginContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_plugin(this);
}

PALParser::Pal_pluginContext* PALParser::pal_plugin() {
  Pal_pluginContext *_localctx = _tracker.createInstance<Pal_pluginContext>(_ctx, getState());
  enterRule(_localctx, 22, PALParser::RulePal_plugin);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(PALParser::PAL_PLUGIN);
    setState(88);
    antlrcpp::downCast<Pal_pluginContext *>(_localctx)->remove = match(PALParser::T__9);
    setState(89);
    match(PALParser::T__6);
    setState(90);
    antlrcpp::downCast<Pal_pluginContext *>(_localctx)->path = match(PALParser::PAL_QUOTED_STRING);
    setState(91);
    match(PALParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pal_statementContext ------------------------------------------------------------------

PALParser::Pal_statementContext::Pal_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PALParser::Pal_clickContext* PALParser::Pal_statementContext::pal_click() {
  return getRuleContext<PALParser::Pal_clickContext>(0);
}

PALParser::Pal_scrollContext* PALParser::Pal_statementContext::pal_scroll() {
  return getRuleContext<PALParser::Pal_scrollContext>(0);
}

PALParser::Pal_moveContext* PALParser::Pal_statementContext::pal_move() {
  return getRuleContext<PALParser::Pal_moveContext>(0);
}

PALParser::Pal_pasteContext* PALParser::Pal_statementContext::pal_paste() {
  return getRuleContext<PALParser::Pal_pasteContext>(0);
}

PALParser::Pal_waitContext* PALParser::Pal_statementContext::pal_wait() {
  return getRuleContext<PALParser::Pal_waitContext>(0);
}

PALParser::Pal_saveContext* PALParser::Pal_statementContext::pal_save() {
  return getRuleContext<PALParser::Pal_saveContext>(0);
}

PALParser::Pal_enterContext* PALParser::Pal_statementContext::pal_enter() {
  return getRuleContext<PALParser::Pal_enterContext>(0);
}

PALParser::Pal_pluginContext* PALParser::Pal_statementContext::pal_plugin() {
  return getRuleContext<PALParser::Pal_pluginContext>(0);
}


size_t PALParser::Pal_statementContext::getRuleIndex() const {
  return PALParser::RulePal_statement;
}

void PALParser::Pal_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPal_statement(this);
}

void PALParser::Pal_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PALListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPal_statement(this);
}

PALParser::Pal_statementContext* PALParser::pal_statement() {
  Pal_statementContext *_localctx = _tracker.createInstance<Pal_statementContext>(_ctx, getState());
  enterRule(_localctx, 24, PALParser::RulePal_statement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PALParser::PAL_CLICK: {
        enterOuterAlt(_localctx, 1);
        setState(93);
        pal_click();
        break;
      }

      case PALParser::PAL_SCROLL: {
        enterOuterAlt(_localctx, 2);
        setState(94);
        pal_scroll();
        break;
      }

      case PALParser::PAL_MOVE: {
        enterOuterAlt(_localctx, 3);
        setState(95);
        pal_move();
        break;
      }

      case PALParser::PAL_PASTE: {
        enterOuterAlt(_localctx, 4);
        setState(96);
        pal_paste();
        break;
      }

      case PALParser::PAL_WAIT: {
        enterOuterAlt(_localctx, 5);
        setState(97);
        pal_wait();
        break;
      }

      case PALParser::PAL_SAVE: {
        enterOuterAlt(_localctx, 6);
        setState(98);
        pal_save();
        break;
      }

      case PALParser::PAL_ENTER: {
        enterOuterAlt(_localctx, 7);
        setState(99);
        pal_enter();
        break;
      }

      case PALParser::PAL_PLUGIN: {
        enterOuterAlt(_localctx, 8);
        setState(100);
        pal_plugin();
        break;
      }
